# python-ai-primer

./: .gitignore  CLAUDE.md  day1-randomvariable.py  day2-gradient.py  day3-deeplearning.py  main.py  pyproject.toml  requirements.txt
